# OpenBTS-UMTS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.common
ASN/: CMakeLists.txt  files.cmake  makefile
CLI/: CLI.cpp  CLI.h  CMakeLists.txt
CommonLibs/: BitVector.cpp  BitVector.h  BitVectorTest.cpp  ByteVector.cpp  ByteVector.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationTest.cpp  F16.h  F16Test.cpp  Interthread.h  InterthreadTest.cpp  LinkedLists.cpp  LinkedLists.h  LogTest.cpp  Logger.cpp  Logger.h  MemoryLeak.h  Regexp.h  RegexpTest.cpp  ScalarTypes.h  Sockets.cpp  Sockets.h  SocketsTest.cpp  Threads.cpp  Threads.h  Timeval.cpp  Timeval.h  TimevalTest.cpp  TurboCoder.cpp  TurboCoder.h  URLEncode.cpp  URLEncode.h  URLEncodeTest.cpp  Utils.cpp  Utils.h  Vector.h  VectorTest.cpp  sqlite3util.cpp  (+1 more)
Control/: CMakeLists.txt  CallControl.cpp  CallControl.h  ControlCommon.cpp  ControlCommon.h  DCCHDispatch.cpp  MobilityManagement.cpp  MobilityManagement.h  RRLP_PDU_Test.cpp  RadioResource.cpp  RadioResource.h  SMSControl.cpp  SMSControl.h  TMSITable.cpp  TMSITable.h  TransactionTable.cpp  TransactionTable.h
GSM/: AppInfTest.cpp  CMakeLists.txt  GSM610Tables.cpp  GSM610Tables.h  GSMCommon.cpp  GSMCommon.h  GSML3CCElements.cpp  GSML3CCElements.h  GSML3CCMessages.cpp  GSML3CCMessages.h  GSML3CommonElements.cpp  GSML3CommonElements.h  GSML3MMElements.cpp  GSML3MMElements.h  GSML3MMMessages.cpp  GSML3MMMessages.h  GSML3Message.cpp  GSML3Message.h  GSML3RRElements.cpp  GSML3RRElements.h  GSML3RRMessages.cpp  GSML3RRMessages.h  GSMSMSCBL3Messages.cpp  GSMSMSCBL3Messages.h  GSMTAPDump.cpp  GSMTAPDump.h  GSMTransfer.cpp  GSMTransfer.h  PhysicalStatus.cpp  PhysicalStatus.h  PowerManager.cpp  PowerManager.h  gsmtap.h
Globals/: CMakeLists.txt  Defines.h  Globals.cpp  Globals.h
SGSNGGSN/: CMakeLists.txt  GPRSL3Messages.cpp  GPRSL3Messages.h  Ggsn.cpp  Ggsn.h  LLC.cpp  LLC.h  Sgsn.cpp  Sgsn.h  SgsnBase.h  SgsnCli.cpp  SgsnExport.h  iputils.cpp  miniggsn.cpp  miniggsn.h
SIP/: CMakeLists.txt  SIPEngine.cpp  SIPEngine.h  SIPInterface.cpp  SIPInterface.h  SIPMessage.cpp  SIPMessage.h  SIPUtility.cpp  SIPUtility.h
SMS/: CMakeLists.txt  SMSMessages.cpp  SMSMessages.h  SMSTransfer.cpp  SMSTransfer.h
TRXManager/: CMakeLists.txt  TRXManager.cpp  TRXManager.h
TransceiverRAD1/: CMakeLists.txt  Complex.h  DummyLoad.cpp  DummyLoad.h  FactoryCalibration.cpp  FactoryCalibration.h  RAD1Cmd.cpp  RAD1Device.cpp  RAD1Device.h  RAD1SN.cpp  RAD1ping.cpp  Transceiver.cpp  Transceiver.h  ad9862.h  bytesex.h  commands.h  fpga_regs.h  fusb.cpp  fusb.h  i2c.h  ids.h  interfaces.h  radioDevice.h  radioInterface.cpp  radioInterface.h  rnrad1.h  rnrad1Core.cpp  rnrad1Core.h  rnrad1Rx.cpp  rnrad1Tx.cpp  runTransceiver.cpp  sigProcLib.cpp  sigProcLibTest.cpp  spi.h
TransceiverUHD/: CMakeLists.txt  RadioDevice.h  RadioInterface.cpp  RadioInterface.h  Resampler.cpp  Resampler.h  SampleBuffer.cpp  SampleBuffer.h  Transceiver.cpp  Transceiver.h  UHDDevice.cpp  UHDDevice.h  convert.c  convert.h  convolve.c  convolve.h  runTransceiver.cpp
UMTS/: AsnHelper.cpp  AsnHelper.h  CMakeLists.txt  Complex.h  IntegrityProtect.cpp  IntegrityProtect.h  MACEngine.cpp  MACEngine.h  RateMatch.cpp  RateMatch.h  UMTSCLI.cpp  UMTSCodes.cpp  UMTSCodes.h  UMTSCommon.cpp  UMTSCommon.h  UMTSConfig.cpp  UMTSConfig.h  UMTSL1CC.cpp  UMTSL1CC.h  UMTSL1Const.cpp  UMTSL1Const.h  UMTSL1FEC.cpp  UMTSL1FEC.h  UMTSLogicalChannel.cpp  UMTSLogicalChannel.h  UMTSPhCh.cpp  UMTSPhCh.h  UMTSRadioModem.cpp  UMTSRadioModem.h  UMTSRadioModemSequences.cpp  UMTSRadioModemSequences.h  UMTSTransfer.cpp  UMTSTransfer.h  URLC.cpp  URLC.h  URRC.cpp  URRC.h  URRCDefs.h  URRCMessages.cpp  URRCMessages.h  (+7 more)
apps/: CMakeLists.txt  GetConfigurationKeys.cpp  OpenBTS-UMTS.cpp  OpenBTS-UMTSCLI.cpp  OpenBTS-UMTSDo.cpp
cmake/: features.cmake
